<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F8"
    tools:context=".Register">


    <TextView
        android:id="@+id/createNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="67dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/create_new_account"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline17">

        <EditText
            android:id="@+id/fullNameInput"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/userNameInput"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/reTypePassword"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/phoneInput"
            android:layout_width="220sp"
            android:layout_height="50sp"
            android:ems="10"
            android:fontFamily="@font/ubuntu_regular"
            android:hint="@string/phone"
            android:inputType="phone"
            android:textColor="@color/black" />
    </LinearLayout>

    <TextView
        android:id="@+id/goToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="99dp"
        android:fontFamily="@font/ubuntu_regular"
        android:text="@string/login_here"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="139dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/register"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="229dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="469dp" />


</androidx.constraintlayout.widget.ConstraintLayout>