<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF7F8"
    tools:context=".SecondQuiz">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <TextView
        android:id="@+id/tvQuiz2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/main_goal_title"
        android:textColor="@color/black"
        android:textSize="29sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/mainGoalGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/tvQuiz2">

        <RadioButton
            android:id="@+id/rbGoal1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/choices_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:onClick="getSkinMainGoal"
            android:paddingLeft="20dp"
            android:text="@string/rb_goal_1"
            android:textColor="@drawable/text_color_choices_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbGoal2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/choices_selector"
            android:button="@android:color/transparent"
            android:onClick="getSkinMainGoal"
            android:paddingLeft="20dp"
            android:text="@string/rb_goal_2"
            android:textColor="@drawable/text_color_choices_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbGoal3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/choices_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:onClick="getSkinMainGoal"
            android:paddingLeft="20dp"
            android:text="@string/rb_goal_3"
            android:textColor="@drawable/text_color_choices_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbGoal4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/choices_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:onClick="getSkinMainGoal"
            android:paddingLeft="20dp"
            android:text="@string/rb_goal_4"
            android:textColor="@drawable/text_color_choices_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rbGoal5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:background="@drawable/choices_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/ubuntu_regular"
            android:onClick="getSkinMainGoal"
            android:paddingLeft="20dp"
            android:text="@string/rb_goal_5"
            android:textColor="@drawable/text_color_choices_selector"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/ubuntu_bold"
        android:onClick="goToThirdQuiz"
        android:text="@string/next_quiz_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4" />


</androidx.constraintlayout.widget.ConstraintLayout>